--- a/src/components/AttendanceForm/style.css
+++ b/src/components/AttendanceForm/style.css
@@ -80,8 +80,9 @@ h4 {
   justify-content: center;
   margin-top: 5rem;
 }
-.nao-atendido{
-  margin-left: 543px;
+.nao-atendido {
+  display: flex;
+  justify-content: center;
 
 }
 .previous{
