--- a/src/components/CardPatient/style.css
+++ b/src/components/CardPatient/style.css
@@ -21,3 +21,7 @@
 .div-pagination-home {
     margin-top: 0.3rem;
 }
+.card{
+    filter: drop-shadow(0 6px 8px rgba(112, 112, 112, 0.4));
+    border-radius: 10%;
+}
