--- a/src/components/Help/style.css
+++ b/src/components/Help/style.css
@@ -7,6 +7,7 @@
   h1 {
     font-size: 24px;
     margin-bottom: 20px;
+    margin-left: 145px;
   }
   
   h2 {
@@ -35,4 +36,7 @@
   }
   .faq-section3 img{
     width: 100%;
+  }
+  .previous{
+    display:flex;
   }
